Create function update/out team